fix labels vertical gaps

--- a/frontend/less/espo/elements/type.less
+++ b/frontend/less/espo/elements/type.less
@@ -135,6 +135,7 @@ blockquote {
 .label-md {
     font-weight: normal;
     font-size: 100%;
+    line-height: 1.9;
     padding: @label-padding-medium;
     top: 0;
 }
